hphp/test/zend/bad/ext-spl/spl_cachingiterator_setFlags_basic.php
<?php

$ai = new ArrayIterator(array('foo', 'bar'));

$ci = new CachingIterator($ai);
$ci->setFlags(); //expects arg

?>